# vocatim

./: .gitignore  .gitmodules  PRIVACY_POLICY.md  README.md  STORE_LISTING.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/vocatim/app/: MainActivity.kt  VocatimApp.kt
app/src/main/java/com/vocatim/app/data/audio/: AudioCompressor.kt  AudioImporter.kt  StreamingResampler.kt  WavDecoder.kt  WavFileWriter.kt  WavStreamReader.kt  WaveformHelper.kt
app/src/main/java/com/vocatim/app/data/backup/: AutoBackup.kt  BackupCodec.kt  BackupManager.kt  KeystoreCrypto.kt
app/src/main/java/com/vocatim/app/data/billing/: BillingManager.kt  QuotaStore.kt
app/src/main/java/com/vocatim/app/data/cloud/: CloudAiClient.kt  CloudAiPrefs.kt  CloudPrompts.kt
app/src/main/java/com/vocatim/app/data/db/: AttachmentEntity.kt  SegmentEntity.kt  TranscriptDao.kt  TranscriptEntity.kt  VocatimDatabase.kt
app/src/main/java/com/vocatim/app/data/export/: MarkdownFormatter.kt  PdfExporter.kt  SrtFormatter.kt  VttFormatter.kt
app/src/main/java/com/vocatim/app/data/model/: DiarizationModel.kt  LiveCaptionModel.kt  ModelManager.kt  ModelState.kt  ParakeetModel.kt  VadModel.kt  WhisperModel.kt
app/src/main/java/com/vocatim/app/data/prefs/: RtfStore.kt  UserPrefs.kt  VocatimDataStore.kt
app/src/main/java/com/vocatim/app/data/repository/: ImportCoordinator.kt  StartupRecovery.kt  TranscriptRepository.kt
app/src/main/java/com/vocatim/app/data/summary/: ContextBudget.kt  LlmLock.kt  LlmSession.kt  LocalQa.kt  LocalTranslator.kt  Summarizer.kt  SummaryModel.kt  SummaryModelManager.kt  SummaryProgressHolder.kt
app/src/main/java/com/vocatim/app/data/transcribe/: ChunkPlanner.kt  DiarizationProgressHolder.kt  KeyPointsExtractor.kt  LiveCaptionEngine.kt  ParakeetTranscriber.kt  SegmentMerger.kt  SilenceAligner.kt  SpeakerDiarizer.kt  SpeakerNames.kt  ThreadPolicy.kt  TitleGenerator.kt  TranscriptFormatter.kt  TranscriptionProgress.kt  TranscriptionRunner.kt  WhisperTranscriber.kt  WordTimings.kt
app/src/main/java/com/vocatim/app/di/: AppModule.kt
app/src/main/java/com/vocatim/app/service/: DiarizationService.kt  LiveTranscriptionRunner.kt  Notifications.kt  RecordTileService.kt  RecordingService.kt  RecordingStateHolder.kt  SummaryService.kt  TranscriptionService.kt
app/src/main/java/com/vocatim/app/ui/: VocatimNavHost.kt
app/src/main/java/com/vocatim/app/ui/calendar/: CalendarScreen.kt  CalendarViewModel.kt
app/src/main/java/com/vocatim/app/ui/common/: AnimatedSplash.kt  Components.kt  ExpandableSection.kt  FeatureTour.kt  Format.kt  MarkdownText.kt  StarMeter.kt
app/src/main/java/com/vocatim/app/ui/debug/: DebugScreen.kt  DebugViewModel.kt
app/src/main/java/com/vocatim/app/ui/detail/: DetailScreen.kt  DetailViewModel.kt
app/src/main/java/com/vocatim/app/ui/home/: HomeScreen.kt  HomeViewModel.kt
app/src/main/java/com/vocatim/app/ui/lock/: LockScreen.kt
app/src/main/java/com/vocatim/app/ui/onboarding/: OnboardingScreen.kt  OnboardingViewModel.kt
app/src/main/java/com/vocatim/app/ui/paywall/: PaywallScreen.kt  PaywallViewModel.kt
app/src/main/java/com/vocatim/app/ui/record/: RecordScreen.kt  RecordViewModel.kt
app/src/main/java/com/vocatim/app/ui/settings/: SettingsScreen.kt  SettingsViewModel.kt
app/src/main/java/com/vocatim/app/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/vocatim/app/ui/trash/: TrashScreen.kt
app/src/main/java/com/vocatim/app/widget/: RecordWidgetProvider.kt
app/src/main/res/drawable/: ic_launcher_bg.xml  ic_launcher_foreground.xml  ic_splash.xml  ic_stat_mic.xml
app/src/main/res/layout/: widget_record.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml  widget_record_info.xml
app/src/test/java/com/vocatim/app/data/audio/: StreamingResamplerTest.kt  WavDecoderTest.kt  WavFileWriterTest.kt
app/src/test/java/com/vocatim/app/data/backup/: BackupCodecTest.kt
app/src/test/java/com/vocatim/app/data/export/: SrtFormatterTest.kt  VttFormatterTest.kt
app/src/test/java/com/vocatim/app/data/model/: ModelManagerTest.kt
app/src/test/java/com/vocatim/app/data/transcribe/: ChunkPlannerTest.kt  KeyPointsExtractorTest.kt  SegmentMergerTest.kt  SilenceAlignerTest.kt  TitleGeneratorTest.kt
docs/superpowers/specs/: 2026-07-10-vocatim-play-store-promo-design.md
gradle/: libs.versions.toml
llm/: build.gradle.kts
llm/src/main/java/com/vocatim/llm/: LlamaLib.kt  LlamaSummarizer.kt
llm/src/main/jni/llm/: CMakeLists.txt  llm_jni.cpp
store-assets/: UPLOAD-GUIDE.txt
whisper/: build.gradle.kts
whisper/src/main/java/com/vocatim/whisper/: WhisperContext.kt  WhisperCpuConfig.kt  WhisperLib.kt  WhisperSegment.kt
whisper/src/main/jni/whisper/: CMakeLists.txt  jni.c
